--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,12 @@
-<button mat-raised-button color="primary" (click)="addRow()">Primary</button>
+<!-- <button mat-raised-button color="primary" (click)="addRow()">Primary</button>
 
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource">
-    <!-- Position Column -->
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef>No.</th>
       <td mat-cell *matCellDef="let element">{{ element.position }}</td>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let element">
@@ -26,7 +24,6 @@
       </td>
     </ng-container>
 
-    <!-- Weight Column -->
     <ng-container matColumnDef="weight">
       <th mat-header-cell *matHeaderCellDef>Weight</th>
       <td mat-cell *matCellDef="let element">
@@ -44,7 +41,6 @@
       </td>
     </ng-container>
 
-    <!-- Symbol Column -->
     <ng-container matColumnDef="symbol">
       <th mat-header-cell *matHeaderCellDef>Symbol</th>
       <td mat-cell *matCellDef="let element">
@@ -63,4 +59,8 @@
     [pageSizeOptions]="[5, 10, 20]"
     showFirstLastButtons
   ></mat-paginator>
-</div>
+</div> -->
+<!-- <label for=""></label> -->
+<!-- <input type="text" appCustomdate data-info="abc" /> -->
+
+<input type="text" appCustomdatesec />
