--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,6 +61,6 @@
   ></mat-paginator>
 </div> -->
 <!-- <label for=""></label> -->
-<!-- <input type="text" appCustomdate data-info="abc" /> -->
+<input type="text" appCustomdate data-info="abc" />
 
-<input type="text" appCustomdatesec />
+<!-- <input type="text" appCustomdatesec /> -->
