--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,4 +63,4 @@
 <!-- <label for=""></label> -->
 <!-- <input type="text" appCustomdate data-info="abc" /> -->
 
-<input type="text" appCustomdatesec />
+<input type="text" appCustomdatesec spattern="4th" ncar="28" />
